<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    android:layout_width="300dp"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/padding_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/padding_view">

        </TextView>
        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black_gray"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/tv_result">

        </EditText>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black_gray"
            android:layout_marginTop="24dp"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/et_old_password">

        </EditText>

        <Button
            android:id="@+id/b_submit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/blue_button"
            android:text="@string/create"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/padding_view"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/et_new_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>