<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="16dp"
    android:layout_width="300dp"
    android:layout_height="450dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/padding_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/create_desc"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/padding_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/name_game"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_game_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/players"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/private_game"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

        </TextView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_private_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/private_game"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

        </TextView>

        <Button
            android:id="@+id/b_create"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/blue_button"
            android:text="@string/create"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/padding_view"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintStart_toStartOf="@+id/padding_view" />


        <View
            android:id="@+id/chipGroup"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/gray_with_corners"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.437"
            app:selectionRequired="true"
            app:singleSelection="true"></View>

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/blue_button"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/chipGroup"
            app:layout_constraintTop_toTopOf="@+id/chipGroup">

        </TextView>

        <TextView
            android:id="@+id/tv_4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/full_transparant"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/light_black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/chipGroup"
            app:layout_constraintTop_toTopOf="@+id/chipGroup">

        </TextView>

        <com.example.chess.CustomElements.MySpinner
            android:id="@+id/s_mode_game"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:backgroundTint="@color/black"
            android:popupBackground="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/prekol"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/padding_view"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

        </TextView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_prekol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/padding_view"
            app:layout_constraintTop_toTopOf="@+id/textView9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>